# coqui_ros2

./: .gitmodules  README.md
coqui_tts_ros2/: package.xml  setup.cfg  setup.py
coqui_tts_ros2/coqui_tts_ros2/: coqui_tts_ros2_node.py
coqui_tts_ros2_interfaces/: CMakeLists.txt  package.xml
coqui_tts_ros2_interfaces/action/: TTS.action
docker/: Base.Dockerfile  Dockerfile  build.sh  compose.yaml  ros_entrypoint.sh
scripts/: clone_model.py
